prevent aligned images from sticking out of the story-box

--- a/public_html/layout/professional/style.css
+++ b/public_html/layout/professional/style.css
@@ -630,6 +630,7 @@ select {
   /* the bottom of the story with edit-links etc */
   padding:3px;
   text-align:center;
+  clear:both;
 }
 .story-information {
   /* the author, views and date of a story */
